--- a/src/app/styles/thems/normal.scss
+++ b/src/app/styles/thems/normal.scss
@@ -1,7 +1,9 @@
 :root {
   --bg-color: #e8e8ea;
-
+  --inverted-bg-color: #090949;
 
   --primary-color: #0232c2;
   --secondary-color: #0449e0;
+  --inverted-primary-color: #1cec1c;
+  --inverted-secondary-color: #1cec1c;
 }
