create sidebar/i18n internalization/

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,16 @@
 
   background: var(--bg-color);
   color: var(--primary-color);
+  transition: background-color 0.3s ease;
 
   min-height: 100vh;
+}
+
+.content-page {
+  display: flex;
+}
+
+.page-wrapper {
+  flex-grow: 1;
+  padding: 20px;
 }
