--- a/src/app/styles/thems/dark.scss
+++ b/src/app/styles/thems/dark.scss
@@ -1,7 +1,7 @@
 .app.dark {
     --bg-color: #090949;
     --inverted-bg-color: #e8e8ea;
-    --primary-color: #1cec1c;
+    --primary-color: #42de42;
     --secondary-color: #1cec1c;
     --inverted-primary-color: #0232c2;
     --inverted-secondary-color: #004dff;
