--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,11 +3,13 @@
 @import "thems/normal";
 @import "thems/dark";
 
-.app {
+body {
     font: var(--font-m);
-    background: var(--bg-color);
     color: var(--primary-color);
-    transition: background-color 0.3s ease;
+}
+
+.app {
+    background: var(--bg-color);
     min-height: 100vh;
 }
 
