--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -26,6 +26,12 @@
     background: none;
 }
 
+.outline_red {
+    color: var(--red-light);
+    background: none;
+    border: 1px solid var(--red-light);
+}
+
 .background {
     background: var(--bg-color);
     color: var(--primary-color);
