add skeleton, articles page, articles details page, article entity

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,11 @@
     --secondary-color: #1cec1c;
     --inverted-primary-color: #0232c2;
     --inverted-secondary-color: #004dff;
+
+    // skeleton
+    --sceleton-color: #1515ad;
+    --sceleton-shadow: #2b2be8;
+
+    // code
+    --code-bg: #0c0c70;
 }
