--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,4 +5,11 @@
     --secondary-color: #0449e0;
     --inverted-primary-color: #1cec1c;
     --inverted-secondary-color: #1cec1c;
+
+    // skeleton
+    --sceleton-color: #fff;
+    --sceleton-shadow: rgba(0 0 0 / 20%);
+
+    // code
+    --code-bg: #fff;
 }
